--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,7 +28,7 @@ h1 {
    
 }
 
-.instructions-btn {
+div .instructions-btn {
       
    
     background-color: white;
@@ -42,6 +42,7 @@ h1 {
     cursor: pointer;
     transition: all 0.3s ease;
     text-align: center;
+   
     
 }
 
@@ -118,6 +119,7 @@ h1 {
 main {
     padding: 1rem;
     display: flex;
+
     justify-content: center;
     align-items: center;
     min-height: 80vh;
