--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,9 +28,7 @@ h1 {
    
 }
 
-div .instructions-btn {
-      
-   
+.instructions-btn {  
     background-color: white;
     color:black;
     border: none;
@@ -41,16 +39,19 @@ div .instructions-btn {
     border-radius: 5px;
     cursor: pointer;
     transition: all 0.3s ease;
-    text-align: center;
+  
    
-    
 }
 
 .instructions-btn:hover {
     background-color: #f0f0f0;
     transform: translateY(-2px);
 }
-
+div.instructions-container {
+    margin-top: 1rem;
+    display: flex;
+    justify-content: center;
+}
 .modal {
     display: none;
     width: 100%;
